src/test/deca/context/invalid/wrong_assignation.deca
// Mauvaise assignation

// Date: 20.01.2022

{
    int a = 2.5;
}